// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render 1 1 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div />
</body>"
`;

exports[`Render 2 1 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div />
</body>"
`;

exports[`Render 3 1 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div />
</body>"
`;

exports[`Render 4 1 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div />
</body>"
`;

exports[`Render 5 1 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div />
</body>"
`;

exports[`Render 6 1 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div>
    <div>
      @components/Gate
    </div>
  </div>
</body>"
`;

exports[`Render 7 1 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div>
    <div>
      @components/Gate
    </div>
  </div>
</body>"
`;

exports[`Render 8 1 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div>
    <div>
      @components/Gate
    </div>
  </div>
</body>"
`;
